input box too big on mobile, this should fix

--- a/style.css
+++ b/style.css
@@ -235,7 +235,16 @@ p {
 	
 	text-align: center;
 	font-size: 54px;
+
+	outline: none;
+	border-radius: 6px;
+	border: solid 2px #2e2e2f;
 }
+
+#wordle-index:focus {
+	border: solid 2px #e6e6e6;
+}
+
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button,
